Distorted UI fix

--- a/templatestore/frontend/src/style/whatsAppEditor.less
+++ b/templatestore/frontend/src/style/whatsAppEditor.less
@@ -267,7 +267,7 @@
   .WAinputs{
     margin-top: 20px !important;
   }
-  input{
+  .WAinput{
     width: 90%;
     margin-top: 10px;
     margin-bottom:8px;
@@ -304,7 +304,7 @@
     border-radius: 5px;
     width: 120px;
   }
-  select {
+  .WAselect {
     border: 1px solid #9ca1a7;
     border-radius: 5px;
     text-indent: 15px;
